syntax = "proto3";

package sum;

message SumRequest {
	int32 firstInt = 1;
	int32 secondInt = 2;
}

message SumResponse {
	int32 result = 1;
}

service SumService {
	rpc Sum (SumRequest) returns (SumResponse) {};
}